--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap");
+
+body {
+  background-color: hsl(37, 100%, 45%);
+  font-family: "Kumbh Sans", sans-serif;
+  font-weight: 400;
+  font-size: 1.5em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main {
+  padding: 3em;
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
+}
+
+h1 {
+  font-size: 1.7em;
+  font-weight: 700;
+  margin-bottom: 10px;
+  margin-top: 0;
+}
+
+.span.info {
+  margin-bottom: 15px;
+}
+
+.card {
+  height: 590px;
+  width: 450px;
+  background-color: hsl(183, 76%, 36%);
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+.profile-pic {
+  padding: 2em;
+  height: 250px;
+  width: 250px;
+  border-radius: 180px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.name {
+  margin-right: 10px;
+}
+
+.btn {
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+
+.name,
+.skill {
+  border-radius: 5px;
+  width: 95px;
+  height: 45px;
+}
+
+.fa-heart {
+  border: none;
+  background-color: transparent;
+  outline: none;
+}
+
+.name:hover,
+.skill:hover {
+  background-color: hsl(355, 70%, 43%);
+}
+
+.footer {
+  margin-top: 25px;
 }
